--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.8.1"
 flask = "^3.0.0"
 flask-cors = "^4.0.0"
 requests = "^2.31.0"
+anthropic = "^0.25.0"
+pyyaml = "^6.0.1"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
