--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ requests = "^2.32.3"
 anthropic = "^0.54.0"
 pyyaml = "^6.0.2"
 python-dotenv = "^1.1.0"
+psutil = "^6.1.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
