Enhance error recovery system and integrate Langfuse for observability
- Introduced a comprehensive error recovery system for Flutter, combining AI-powered code fixes, automated command execution, and iterative validation.
- Added Langfuse integration for enhanced observability of AI model usage, allowing for better monitoring and insights.
- Implemented shell command execution from AI responses using `<shell>` tags, improving flexibility in error resolution.
- Enhanced logging capabilities for error recovery processes, providing detailed metrics and visibility into recovery attempts.
- Updated dependencies in `pyproject.toml` and added new environment variables in `.env` for Langfuse integration.

This update significantly improves the reliability and observability of the Flutter development server's error recovery capabilities.

--- a/code_modification/prompts/analyze_errors.yaml
+++ b/code_modification/prompts/analyze_errors.yaml
@@ -1,4 +1,4 @@
-name: "Analyze Flutter Compilation Errors for Relace Fixes"
+name: "Analyze Flutter Compilation Errors"
 description: "Lightweight analysis of Flutter compilation errors to identify specific fixes needed"
 version: "2.0"
 category: "error_recovery"
