--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ anthropic = "^0.54.0"
 pyyaml = "^6.0.2"
 python-dotenv = "^1.1.0"
 psutil = "^6.1.1"
+langfuse = "^3.0.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
